2006-08-25  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/runtar.c: Check that strcmp(argv[3], "--create") == 0.

2006-08-24  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/statfs.c (scale): Macro replaced by a function.

2006-08-24  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/chunker.c: Use STREAM_BUFSIZE for stream_accept.
	* server-src/taper.c: Use STREAM_BUFSIZE for stream_accept.

2006-08-24  Maitreyee Karmarkar <maitreyee.zmanda.com>
	* man/xml-source/amcheck.8.xml: amcheck xml man page change 

2006-08-23  Kevin Till <ktill@zmanda.com>
	*  server-src/driver.c: fix typo

2006-08-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (dumper_result): Decrement pendings_aborts.
	* server-src/driver.c (handle_dumper_result): Don't send duper result
	  to chunker if we aborted it.
	* server-src/driverio.c (dumper_cmd, chunker_cmd): Don't close the fd
	  on ABORT.
	* server-src/dumper.c: Accept ABORT command.

2006-08-23  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c (restore): Set bytes_read to the return value
	  of read_file_header.

2006-08-22  Jean-Louis Martineau <martineau@zmanda.com>
	* tape-src/output-tape.c: Works if EOVERFLOW is not defined.

2006-08-21  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c, common-src/rsh-security.c,
	  common-src/ssh-security.c, restore-src/restore.c,
	  server-src/changer.c, server-src/dumper.c: Fix sentinel warning.

2006-08-21  Jean-Louis Martineau <martineau@zmanda.com>
	* example/amanda.conf.in: Typo.

2006-08-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driverio.c: Fix bogus "(unsigned long)-1".

2006-08-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (start_some_dumps): Remove bogus free_assignedhd.

2006-08-21  Maitreyee Karmarkar <maitreyee.zmanda.com>
	* server-src/amcheck.c: Check specific clients
	* man/amcheck.8: add the multiple client check format
