@@ -1,3 +1,6 @@
+2006-08-28  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amstatus.pl.in: Correct size for retried dump.
+
 2006-08-25  Jean-Louis Martineau <martineau@zmanda.com>
 	* client-src/runtar.c: Check that strcmp(argv[3], "--create") == 0.
 
